--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,17 @@
 name = "app"
 version = "0.1.0"
 description = "TBD"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.1.3",
     "pandas>=2.2.3",
+    "polars>=1.15.0",
     "scipy>=1.14.1",
     "scikit-learn>=1.5.2",
-    "matplotlib>=3.9.2",
+    "xgboost>=2.1.3",
+    "pydantic>=2.10.2",
     "plotly>=5.24.1",
-    "openpyxl>=3.1.5",     # For Excel support
+    "openpyxl>=3.1.5",
 ]
 
 [project.optional-dependencies]
@@ -19,6 +21,8 @@ dev = [
     "mypy>=1.13.0",
     "pandas-stubs>=2.2.3.241009",
     "scipy-stubs>=1.14.1.3",
+    "pytest>=8.3.3",
+    "ipykernel>=6.29.5",
 ]
 
 [build-system]
@@ -39,7 +43,7 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.13"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
